--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "league/iso3166": "^4.3",
         "pragmarx/google2fa": "^8.0",
         "psr/http-message": "^1.0.1",
         "pusher/pusher-php-server": "^7.2",
