--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
