--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "emoji-picker-react": "^4.13.2",
     "framer-motion": "^11.15.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
